--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,9 @@ body {
     left: 5px;
     color: inherit;
 }
+
+.inactive {
+    background-color: #f0f0f0;
+    border: 1px solid transparent;
+    cursor: default;
+}
