--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff; /* Balta fona krāsa */
+    background-color: #ffffff; /* White background */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,10 +9,10 @@ body {
 }
 
 #calendar-container {
-    background: #ffffff; /* Balta fona krāsa */
+    background: #ffffff; /* White background */
     border-radius: 20px;
     padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    /* Remove box-shadow */
 }
 
 #calendar {
