--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 
 .day {
     border: 1px solid #0043b3;
-    padding: 5px;
+    padding-top: 30px;
     position: relative;
     height: 70px;
     overflow: hidden;
