--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ body {
 .day {
     border: 1px solid #0043b3;
     padding-top: 30px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
     position: relative;
     height: 70px;
     overflow: hidden;
@@ -63,7 +66,7 @@ body {
 .event-preview {
     display: flex;
     align-items: center; /* Align the bullet and text vertically */
-    font-size: 14px; /* Reduce font size */
+    font-size: 12px; /* Reduce font size */
     color: #0043B3; /* Blue text color */
     margin: 0; /* Remove external margin */
     padding: 0 2px; /* Minimal padding */
